# rpo

./: CMakeLists.txt  package.xml
files/: hospital_parameters.txt
include/: augmented_model.h  augmented_octree.h  custom_octree.h  dose_calculator.h  fitness_score.h  parameters.h  plan_generator.h  ros_visualizer.h
models/: hospital_model.ot  hospital_model_dose.ot
src/: augmented_model.cpp  augmented_octree.cpp  custom_octree.cpp  dose_calculator.cpp  fitness_score.cpp  main.cpp  parameters.cpp  plan_generator.cpp  ros_visualizer.cpp
test/: augmented_octree_test.cpp  calculator_test.cpp  parameters_test.cpp  preprocessor_test.cpp  visualizer_test.cpp
